alterando header para atender celular tambem

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
                 <div class="logo max-logo">
                    <a href=""> <img src="logos/afe28932-f3f0-4054-b7a6-d07602e8ca6a_200x200.png" alt=" logo tipo da empresa"></a>
                 </div>
+                <div class="menu">
+                    <div class="herburger">
+                        
+                    </div>
+                </div>
             <nav class="nav-bar max-nav">
                 <ul>
                     <li><a href="cursosCatalogo/cursos.html">Menu</a></li>
